basic sign in page that does nothing

--- a/webportal/webapp/src/app/account/loginsync/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/loginsync.component.html
@@ -1,3 +1,19 @@
-<p>
-  loginsync works!
-</p>
+<div class="container">
+  <mat-card>
+    <div>
+        <form class="usa-form signin">
+            <fieldset class="usa-fieldset">
+                <legend class="usa-legend">Sign in</legend>
+        
+                <label for="username">Username or email address</label>
+                <input class="usa-input" id="username" name="username" type="text" autocapitalize="off" autocorrect="off">
+        
+                <label for="password-sign-in">Password</label>
+                <input class="usa-input" id="password-sign-in" name="password" type="password">
+        
+                <input class="usa-button" type="submit" value="Sign in">
+            </fieldset>
+        </form>
+    </div>
+  </mat-card>
+</div>
