--- a/webportal/webapp/src/app/account/loginsync/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/loginsync.component.html
@@ -5,7 +5,7 @@
         <fieldset class="usa-fieldset">
           <legend class="usa-legend">Sign in</legend>
   
-          <label for="username">Username or email address</label>
+          <label for="username">Username</label>
           <input class="usa-input" id="username" name="username" [(ngModel)]="username" type="email" autocapitalize="off" autocorrect="off">
   
           <label for="password-sign-in">Password</label>
