remove email type from username input

--- a/webportal/webapp/src/app/account/loginsync/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/loginsync.component.html
@@ -6,7 +6,7 @@
           <legend class="usa-legend">Sign in</legend>
   
           <label for="username">Username</label>
-          <input class="usa-input" id="username" name="username" [(ngModel)]="username" type="email" autocapitalize="off" autocorrect="off">
+          <input class="usa-input" id="username" name="username" [(ngModel)]="username" autocapitalize="off" autocorrect="off">
   
           <label for="password-sign-in">Password</label>
           <input class="usa-input" id="password-sign-in" name="password" [(ngModel)]="password" type="password" appTogglePassword>
