--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
@@ -1,9 +1,12 @@
 <div class="container">
   <mat-card>
     <div>
+      <app-alert [showAlert]="!linkSuccessful" [text]="errorMessage"></app-alert>
       <form class="usa-form signin" (ngSubmit)="onSubmit()">
         <fieldset class="usa-fieldset">
           <legend class="usa-legend">Sign in</legend>
+          <p>First-time Login.gov users please sign in below using your Secure Data Commons credentials.</p>
+          <p>If you do not remember your Secure Data Commons credentials, please contact the <a href = "mailto:support@securedatacommons.com">Support Team.</a></p>
   
           <label for="username">Username</label>
           <input class="usa-input" id="username" name="username" [(ngModel)]="username" autocapitalize="off" autocorrect="off">
