--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
@@ -14,7 +14,7 @@
 
           <p>Please sign in using your Secure Data Commons credentials.</p>
           <p>If you do not remember your Secure Data Commons credentials, please contact <a href = "mailto:support@securedatacommons.com" style="text-decoration: none;">Support Team.</a></p>
-          <p>Don't have an account? Follow the instructions from this <a href="https://portal.securedatacommons.com/register" target="_blank" style="text-decoration: none;">link.</a></p>
+          <p>Don't have an account? <a href="https://portal.securedatacommons.com/register" target="_blank" style="text-decoration: none;">Follow the instructions</a> on the SDC portal to create one.</p>
         </fieldset>
       </form>
     </div>
