--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <mat-card>
+    <app-loader></app-loader>
     <div>
       <app-alert [showAlert]="!linkSuccessful" [text]="errorMessage"></app-alert>
       <form class="usa-form signin" (ngSubmit)="onSubmit()">
