--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -25,7 +25,7 @@
       <div class="col-xs-6 column-two">
         <div style="padding: 115px;">
           <div style="margin-bottom: 10px">
-            <p><b>Enter your email address to sign in</b><br>You will be redirected to your organization's sign in page</p>
+            <p><strong>Enter your email address to sign in</strong><br>You will be redirected to your organization's sign in page</p>
           </div>
           <div style="margin-bottom: 20px">
             <input value="" type="text" size="40" class="usa-input" id="email" name="email" [(ngModel)]="email" autocapitalize="off" autocorrect="off">
