--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
@@ -5,16 +5,18 @@
       <app-alert [showAlert]="!linkSuccessful" [text]="errorMessage"></app-alert>
       <form class="usa-form signin" (ngSubmit)="onSubmit()">
         <fieldset class="usa-fieldset">
-          <legend class="usa-legend">Sign in</legend>
+          <legend class="usa-legend">One Time Sign In</legend>
           <label for="username">Username</label>
           <input class="usa-input" id="username" name="username" [(ngModel)]="username" autocapitalize="off" autocorrect="off">
   
           <label for="password-sign-in">Password</label>
           <input class="usa-input" id="password-sign-in" name="password" [(ngModel)]="password" type="password" appTogglePassword>
-          <input class="usa-button" type="submit" value="Sign in">
+          <input class="usa-button link-submit" type="submit" value="Sign in">
 
-          <p>Please sign in using your Secure Data Commons credentials.</p>
-          <p>If you do not remember your Secure Data Commons credentials, please contact <a href = "mailto:support@securedatacommons.com" style="text-decoration: none;">Support Team.</a></p>
+          <p>Please sign in using your internal Secure Data Commons credentials.</p>
+          <p>We will associate your Login.gov account with your internal Secure Data Commons credentials.</p>
+          <p>You will only need to associate your Login.gov account once.</p>
+          <p>If you do not remember your Secure Data Commons credentials, please contact the <a href = "mailto:support@securedatacommons.com" style="text-decoration: none;">Support Team.</a></p>
           <p>Don't have an account? <a href="https://portal.securedatacommons.com/register" target="_blank" style="text-decoration: none;" rel="noopener noreferrer">Follow the instructions</a> on the SDC portal to create one.</p>
         </fieldset>
       </form>
