--- a/webportal/webapp/src/app/main/register/register.component.css
+++ b/webportal/webapp/src/app/main/register/register.component.css
@@ -79,6 +79,17 @@
     padding-top: 10px;
 }
 
+.email-address-container {
+    padding-top: 30px;
+}
+
+.sign-in-container {
+    padding: 30px;
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+}
+
 .accessLink {
     font-size: 20px;
     cursor: pointer;
