Include changes for auto-export
Includes requests by Alexis
- Auto-Export no longer references the raw datatype but now requires a derived datatype name to be submitted when requesting auto-export
- The auto-export request now requires a justification for why they are requesting the permissions along with the justification in the approval page so the data providers can read the justifications

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -391,10 +391,21 @@
                 <div class="ui-g-2"><p-radioButton  name="autoExportRequestGrp" value="No" label="No"   (onClick) = "onAutoExportRequestGrpChange('No')"  [(ngModel)]="autoExportRequest" checked> </p-radioButton> </div>
             </div>
             <br/>
+            <mat-form-field style='width: 100%' *ngIf="autoExportRequestSelected">
+                <input matInput placeholder="Specify the derived dataset name" [(ngModel)]="messageModel.autoderiveddataset" value="{{messageModel.autoderiveddataset}}" required>
+            </mat-form-field>
+            <mat-form-field style='width: 100%' *ngIf="autoExportRequestSelected">
+                <input matInput placeholder="Reason for requesting permission" [(ngModel)]="messageModel.autoreason" value="{{messageModel.autoreason}}" required>
+            </mat-form-field>
           </div>
         </mat-dialog-content> 
         <br/><br/>
-        <div><button class="btn btn-primary dotBtn" (click)="submitRequest()">Submit</button></div>
+        <div>
+          <button class="btn btn-primary dotBtn"
+                  [disabled]="(!messageModel.autoderiveddataset || !messageModel.autoreason) && autoExportRequestSelected"
+                  (click)="submitRequest()">Submit
+          </button>
+        </div>
     </mat-tab>
   </mat-tab-group>
 </div>
