--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -114,6 +114,7 @@
                         <tr>
                             <td>{{autoExportRequest.userFullName}}</td>
                             <td>{{autoExportRequest.dataset}}</td>
+                            <td>{{autoExportRequest.justification}}</td>
                             <td>
                                 <div *ngIf="autoExportRequest.AutoExportStatus == 'Submitted'"> <i class="material-icons iconFont" (click)="submitAutoExportApproval('Approved',autoExportRequest.userFullName,autoExportRequest.dataset,autoExportRequest)" >done</i><i class="material-icons iconFont" (click)="submitAutoExportApproval('Denied',autoExportRequest.userFullName,autoExportRequest.dataset,autoExportRequest)" >close</i></div>
                                 <div *ngIf="autoExportRequest.AutoExportStatus == 'Approved'">
