--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -366,12 +366,11 @@
 
     <mat-tab label="Auto-Export Status" #tab4 [disabled]='selectedIndex!=3' *ngIf="trustedStatus">
       <hr>
-      <p><b>Auto-Export Status is a mechanism for analysts to obtain a passport from a data provider for automatic export of data. Obtaining this passport allows analyst to export their data automatically (for subsequent similar requests), as opposed to manually approving the request for export yourself (as a trusted user). If approved, this passport may be revoked by the data provider at any time.</b>
+      <p><b>Auto-Export is a feature that allows data analysts to export their derived data or analysis products automatically. It avoids the need to manually request exports many times for a similar type of export (as a trusted user). Data analysts must request access to this feature for specific types of exports from data providers. At any point after approval, the data provider may revoke this permission. The trusted status associated with access to the auto-export functionality is given per Project, Data Provider, and Per Sub-Dataset/Datatype.</b>
       <br>
-      <b>This status is acquired per Project + Data Provider + Sub-Dataset/Data Type.</b></p>
       <mat-dialog-content *ngIf="!trustedStatus">
         <br>
-        <p>Note - Based on the dataset and datatype selection, you currently are not eligible for auto-export passport permissions. You must apply to be a trusted user first. Once approved, you may request auto-export permissions.</p>
+        <p>Note - Based on the dataset and datatype selection, you currently are not eligible for auto-export permissions. You must apply to be a trusted user first. Once approved, you may request auto-export permissions.</p>
       </mat-dialog-content>
 
       <mat-dialog-content *ngIf="autoExportStatus && trustedStatus">
@@ -382,8 +381,8 @@
       <mat-dialog-content>
           <div *ngIf="!autoExportStatus && trustedStatus">
             <br>
-            <p>Note - Based on the dataset and datatype selection, you currently do not have Auto-Export Status from this Data Provider. We will notify the Data Provider about your request and send it for approval. Your request will be processed based on the decision from the Data Provider.</p>
-            <h5>Do you wish to request Auto-Export Status from the Data Provider?</h5>
+            <p>Note - You currently do not have Auto-Export Status from this Data Provider. We will notify you when the Data Provider has made a decision.</p>
+            <h5>Do you wish to request Auto-Export permissions from the Data Provider?</h5>
             
             <br/>
             <div class="ui-g">
