--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -316,43 +316,95 @@
       </mat-dialog-content>
       
     </mat-tab>
-    <mat-tab label="Trusted Status" #tab3 [disabled]='selectedIndex!=2'>
+
+    <mat-tab label="Trusted Status" #tab3 [disabled]='selectedIndex<2'>
       <hr>
       <p><b>Trusted Status is a mechanism for analysts to obtain a passport from a data provider. Obtaining this passport allows analyst to export their data immediately (for subsequent similar requests), as opposed to waiting for the review and approval of a data provider.</b>
-      <br>
-      <b>This status is acquired per Project + Data Provider + Sub-Dataset/Data Type.</b></p>
+        <br>
+        <b>This status is acquired per Project + Data Provider + Sub-Dataset/Data Type.</b></p>
       <mat-dialog-content *ngIf="trustedStatus">
         <br>
         <p>Note - Based on the dataset and datatype selection, you currently have Trusted Status from this Data Provider. We will notify the Data Provider about your request.</p>
+      </mat-dialog-content>
+
+      <mat-dialog-content>
+        <div *ngIf="!trustedStatus">
+          <br>
+          <p>Note - Based on the dataset and datatype selection, you currently do not have a Trusted Status from this Data Provider. We will notify the Data Provider about your request and send it for approval. Your request will be processed based on the decision from the Data Provider.</p>
+          <h5>Do you wish to request Trusted Status from the Data Provider?</h5>
+
+          <br/>
+          <div class="ui-g">
+            <div class="ui-g-2"><p-radioButton  name="trustedRequestGrp" value="Yes" label="Yes"  (onClick) = "onTrustedRequestGrpChange('Yes')" [(ngModel)]="trustedRequest"></p-radioButton> </div>
+            <div class="ui-g-2"><p-radioButton  name="trustedRequestGrp" value="No" label="No"   (onClick) = "onTrustedRequestGrpChange('No')"  [(ngModel)]="trustedRequest" checked> </p-radioButton> </div>
+          </div>
+          <br/>
+        </div>
+
+        <p-panel header="Acceptable Use Policy" >
+          <div class="panel-div" [innerHTML]="expWorkflow[selectedDataSet][selectedDataProvider]['UsagePolicyDesc']" *ngIf="expWorkflow && selectedDataSet && selectedDataProvider && expWorkflow[selectedDataSet] && expWorkflow[selectedDataSet][selectedDataProvider]"></div>
+        </p-panel>
+        <br/>
+        <div *ngIf="!trustedStatus">
+          <div class="ui-g">
+            <div class="ui-g-3"><p-radioButton name="acceptableUseGrp" value="Accept" label="Accept"   [disabled]="trustedAcceptableUseDisabled"  [(ngModel)]="acceptableUse"></p-radioButton></div>
+            <div class="ui-g-3"><p-radioButton name="acceptableUseGrp" value="Decline" label="Decline" [disabled]="trustedAcceptableUseDisabled" [(ngModel)]="acceptableUse"></p-radioButton></div>
+          </div>
+        </div>
+      </mat-dialog-content>
+      <br/><br/>
+      <mat-dialog-actions *ngIf="trustedStatus">
+        <button class="btn btn-primary dotBtn request-exportNextBtn"
+                [disabled]="!messageModel.derivedDatasetname"
+                (click)="onTrustedformClick()">NEXT
+        </button>
+        <button class="btn btn-primary dotBtn request-exportCancelBtn" (click)="onNoClick()">CANCEL</button>
+      </mat-dialog-actions>
+      <br *ngIf="!trustedStatus"/><br *ngIf="!trustedStatus"/>
+      <div *ngIf="!trustedStatus"><button class="btn btn-primary dotBtn" (click)="submitRequest()">Submit</button></div>
+    </mat-tab>
+
+    <mat-tab label="Auto-Export Status" #tab4 [disabled]='selectedIndex!=3' *ngIf="trustedStatus">
+      <hr>
+      <p><b>Auto-Export is a feature that allows data analysts to export their derived data or analysis products automatically. It avoids the need to manually request exports many times for a similar type of export (as a trusted user). Data analysts must request access to this feature for specific types of exports from data providers. At any point after approval, the data provider may revoke this permission. The trusted status associated with access to the auto-export functionality is given per Project, Data Provider, and Per Sub-Dataset/Datatype.</b>
+      <br>
+      <mat-dialog-content *ngIf="!trustedStatus">
+        <br>
+        <p>Note - Based on the dataset and datatype selection, you currently are not eligible for auto-export permissions. You must apply to be a trusted user first. Once approved, you may request auto-export permissions.</p>
+      </mat-dialog-content>
+
+      <mat-dialog-content *ngIf="autoExportStatus && trustedStatus">
+        <br>
+        <p>Note - Based on the dataset and datatype selection, you currently have Auto-Export Status from this Data Provider.</p>
       </mat-dialog-content> 
         
       <mat-dialog-content>
-          <div *ngIf="!trustedStatus">
+          <div *ngIf="!autoExportStatus && trustedStatus">
             <br>
-            <p>Note - Based on the dataset and datatype selection, you currently do not have a Trusted Status from this Data Provider. We will notify the Data Provider about your request and send it for approval. Your request will be processed based on the decision from the Data Provider.</p>
-            <h5>Do you wish to request Trusted Status from the Data Provider?</h5>
+            <p>Note - You currently do not have Auto-Export Status from this Data Provider. We will notify you when the Data Provider has made a decision.</p>
+            <h5>Do you wish to request Auto-Export permissions from the Data Provider?</h5>
             
             <br/>
             <div class="ui-g">
-                <div class="ui-g-2"><p-radioButton  name="trustedRequestGrp" value="Yes" label="Yes"  (onClick) = "onTrustedRequestGrpChange('Yes')" [(ngModel)]="trustedRequest"></p-radioButton> </div>
-                <div class="ui-g-2"><p-radioButton  name="trustedRequestGrp" value="No" label="No"   (onClick) = "onTrustedRequestGrpChange('No')"  [(ngModel)]="trustedRequest" checked> </p-radioButton> </div>
+                <div class="ui-g-2"><p-radioButton  name="autoExportRequestGrp" value="Yes" label="Yes"  (onClick) = "onAutoExportRequestGrpChange('Yes')" [(ngModel)]="autoExportRequest"></p-radioButton> </div>
+                <div class="ui-g-2"><p-radioButton  name="autoExportRequestGrp" value="No" label="No"   (onClick) = "onAutoExportRequestGrpChange('No')"  [(ngModel)]="autoExportRequest" checked> </p-radioButton> </div>
             </div>
             <br/>
-          </div>
-
-          <p-panel header="Acceptable Use Policy" >
-              <div class="panel-div" [innerHTML]="expWorkflow[selectedDataSet][selectedDataProvider]['UsagePolicyDesc']" *ngIf="expWorkflow && selectedDataSet && selectedDataProvider && expWorkflow[selectedDataSet] && expWorkflow[selectedDataSet][selectedDataProvider]"></div>
-          </p-panel>
-          <br/>
-          <div *ngIf="!trustedStatus">
-            <div class="ui-g">
-                <div class="ui-g-3"><p-radioButton name="acceptableUseGrp" value="Accept" label="Accept"   [disabled]="trustedAcceptableUseDisabled"  [(ngModel)]="acceptableUse"></p-radioButton></div>
-                <div class="ui-g-3"><p-radioButton name="acceptableUseGrp" value="Decline" label="Decline" [disabled]="trustedAcceptableUseDisabled" [(ngModel)]="acceptableUse"></p-radioButton></div>
-            </div>
+            <mat-form-field style='width: 100%' *ngIf="autoExportRequestSelected">
+                <input matInput placeholder="Specify the derived dataset name" [(ngModel)]="messageModel.autoderiveddataset" value="{{messageModel.autoderiveddataset}}" required>
+            </mat-form-field>
+            <mat-form-field style='width: 100%' *ngIf="autoExportRequestSelected">
+                <input matInput placeholder="Reason for requesting permission" [(ngModel)]="messageModel.autoreason" value="{{messageModel.autoreason}}" required>
+            </mat-form-field>
           </div>
         </mat-dialog-content> 
         <br/><br/>
-        <div><button class="btn btn-primary dotBtn" (click)="submitRequest()">Submit</button></div>
+        <div>
+          <button class="btn btn-primary dotBtn"
+                  [disabled]="(!messageModel.autoderiveddataset || !messageModel.autoreason) && autoExportRequestSelected"
+                  (click)="submitRequest()">Submit
+          </button>
+        </div>
     </mat-tab>
   </mat-tab-group>
 </div>
