checkout master some files

--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.css
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.css
@@ -1,1 +1,14 @@
 @import '~uswds/dist/css/uswds.css';
+
+.signin {
+  margin: 0 auto;
+  text-align: left;
+}
+
+label {
+  margin-top: 2.0rem;
+}
+
+.link-submit {
+  margin-bottom: 15px;
+}
