--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
@@ -1,25 +1,24 @@
 <div class="container">
+  <mat-card>
     <app-loader></app-loader>
-    <div class="grid-row margin-top-3">
-      <div class="grid-col-4"></div>
-      <div class="grid-col-4">
-        <app-alert [showAlert]="!linkSuccessful" [text]="errorMessage"></app-alert>
-        <form class="usa-form signin" (ngSubmit)="onSubmit()">
-          <fieldset class="usa-fieldset">
-            <legend class="border-0 usa-legend">One Time Sign In</legend>
-            <label class="margin-top-4" for="username">Username</label>
-            <input class="usa-input" id="username" name="username" [(ngModel)]="username" autocapitalize="off" autocorrect="off">
-    
-            <label class="margin-top-4" for="password-sign-in">Password</label>
-            <input class="usa-input" id="password-sign-in" name="password" [(ngModel)]="password" type="password" appTogglePassword>
-            <input class="usa-button link-submit margin-top-3" type="submit" value="Sign in">
+    <div>
+      <app-alert [showAlert]="!linkSuccessful" [text]="errorMessage"></app-alert>
+      <form class="usa-form signin" (ngSubmit)="onSubmit()">
+        <fieldset class="usa-fieldset">
+          <legend class="usa-legend">One Time Sign In</legend>
+          <label for="username">Username</label>
+          <input class="usa-input" id="username" name="username" [(ngModel)]="username" autocapitalize="off" autocorrect="off">
+  
+          <label for="password-sign-in">Password</label>
+          <input class="usa-input" id="password-sign-in" name="password" [(ngModel)]="password" type="password" appTogglePassword>
+          <input class="usa-button link-submit" type="submit" value="Sign in">
 
-            <p class="margin-top-4 padding-top-4 border-top">Please sign in using your internal Secure Data Commons credentials. Accounts only need to be linked once.</p>
-            <p>If you do not remember your Secure Data Commons credentials, please contact the <a href = "mailto:support@securedatacommons.com" style="text-decoration: none;">Support Team.</a></p>
-            <p>Don't have an account? <a href="https://portal.securedatacommons.com/register" target="_blank" style="text-decoration: none;" rel="noopener noreferrer">Follow the instructions</a> on the Secure Data Commons portal to create one.</p>
-          </fieldset>
-        </form>
-      </div>
+          <p>Please sign in using your internal Secure Data Commons credentials. Accounts only need to be linked once.</p>
+          <p>If you do not remember your Secure Data Commons credentials, please contact the <a href = "mailto:support@securedatacommons.com" style="text-decoration: none;">Support Team.</a></p>
+          <p>Don't have an account? <a href="https://portal.securedatacommons.com/register" target="_blank" style="text-decoration: none;" rel="noopener noreferrer">Follow the instructions</a> on the Secure Data Commons portal to create one.</p>
+        </fieldset>
+      </form>
     </div>
+  </mat-card>
 </div>
  
